--- a/SampleViewer/index.html
+++ b/SampleViewer/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>Sample Viewer</title>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script type="text/javascript" src="scripts/Chart.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@aspnet/signalr@1.1.2/dist/browser/signalr.js"></script>
     <script type="text/javascript" src="scripts/databysignalr.js"></script>
 </head>
